--- a/themes/cupertino/layout/_partial/head.ejs
+++ b/themes/cupertino/layout/_partial/head.ejs
@@ -50,6 +50,7 @@
   <script src="https://cdn.bootcss.com/blueimp-md5/2.12.0/js/md5.min.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
   <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
-
+  <link rel="stylesheet" href="//cdn.bootcss.com/highlight.js/9.6.0/styles/github.min.css">
+  <script src="//cdn.bootcss.com/highlight.js/9.6.0/highlight.min.js"></script>
 
 </head>
